435assignments/a1/ulNoActionsParser.java
// $ANTLR 3.5.2 ulNoActions.g 2021-05-17 17:52:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ulNoActionsParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDITION", "CBRACE", "CBRACKET", 
		"CHARACTERCONSTANT", "COMMA", "COMMENT", "CPARENTHESES", "DOUBLEEQUAL", 
		"ELSE", "EQUAL", "FALSE", "FLOATCONSTANT", "ID", "IF", "INTEGERCONSTANT", 
		"MINUS", "MULTIPLY", "OBRACE", "OBRACKET", "OPARENTHESES", "PRINT", "PRINTLN", 
		"RETURN", "SEMICOLON", "SMALLERTHAN", "STRINGCONSTANT", "TRUE", "TYPE", 
		"WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int ADDITION=4;
	public static final int CBRACE=5;
	public static final int CBRACKET=6;
	public static final int CHARACTERCONSTANT=7;
	public static final int COMMA=8;
	public static final int COMMENT=9;
	public static final int CPARENTHESES=10;
	public static final int DOUBLEEQUAL=11;
	public static final int ELSE=12;
	public static final int EQUAL=13;
	public static final int FALSE=14;
	public static final int FLOATCONSTANT=15;
	public static final int ID=16;
	public static final int IF=17;
	public static final int INTEGERCONSTANT=18;
	public static final int MINUS=19;
	public static final int MULTIPLY=20;
	public static final int OBRACE=21;
	public static final int OBRACKET=22;
	public static final int OPARENTHESES=23;
	public static final int PRINT=24;
	public static final int PRINTLN=25;
	public static final int RETURN=26;
	public static final int SEMICOLON=27;
	public static final int SMALLERTHAN=28;
	public static final int STRINGCONSTANT=29;
	public static final int TRUE=30;
	public static final int TYPE=31;
	public static final int WHILE=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ulNoActionsParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ulNoActionsParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ulNoActionsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ulNoActions.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}



	// $ANTLR start "program"
	// ulNoActions.g:40:1: program : ( function )+ EOF ;
	public final void program() throws RecognitionException {
		try {
			// ulNoActions.g:40:9: ( ( function )+ EOF )
			// ulNoActions.g:41:9: ( function )+ EOF
			{
			// ulNoActions.g:41:9: ( function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==TYPE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ulNoActions.g:41:9: function
					{
					pushFollow(FOLLOW_function_in_program50);
					function();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_program53); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// ulNoActions.g:44:1: function : functionDecl functionBody ;
	public final void function() throws RecognitionException {
		try {
			// ulNoActions.g:44:9: ( functionDecl functionBody )
			// ulNoActions.g:45:9: functionDecl functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function71);
			functionDecl();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_functionBody_in_function73);
			functionBody();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// ulNoActions.g:48:1: functionDecl : compoundType identifier OPARENTHESES formalParameters CPARENTHESES ;
	public final void functionDecl() throws RecognitionException {
		try {
			// ulNoActions.g:48:13: ( compoundType identifier OPARENTHESES formalParameters CPARENTHESES )
			// ulNoActions.g:49:9: compoundType identifier OPARENTHESES formalParameters CPARENTHESES
			{
			pushFollow(FOLLOW_compoundType_in_functionDecl91);
			compoundType();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_identifier_in_functionDecl93);
			identifier();
			state._fsp--;
			if (state.failed) return;
			match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_functionDecl95); if (state.failed) return;
			pushFollow(FOLLOW_formalParameters_in_functionDecl97);
			formalParameters();
			state._fsp--;
			if (state.failed) return;
			match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_functionDecl99); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParameters"
	// ulNoActions.g:52:1: formalParameters : ( compoundType identifier ( moreFormals )* |);
	public final void formalParameters() throws RecognitionException {
		try {
			// ulNoActions.g:52:17: ( compoundType identifier ( moreFormals )* |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==TYPE) ) {
				alt3=1;
			}
			else if ( (LA3_0==CPARENTHESES) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ulNoActions.g:53:9: compoundType identifier ( moreFormals )*
					{
					pushFollow(FOLLOW_compoundType_in_formalParameters117);
					compoundType();
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_identifier_in_formalParameters119);
					identifier();
					state._fsp--;
					if (state.failed) return;
					// ulNoActions.g:53:33: ( moreFormals )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==COMMA) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// ulNoActions.g:53:33: moreFormals
							{
							pushFollow(FOLLOW_moreFormals_in_formalParameters121);
							moreFormals();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;
				case 2 :
					// ulNoActions.g:55:9: 
					{
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalParameters"



	// $ANTLR start "moreFormals"
	// ulNoActions.g:57:1: moreFormals : COMMA compoundType identifier ;
	public final void moreFormals() throws RecognitionException {
		try {
			// ulNoActions.g:57:12: ( COMMA compoundType identifier )
			// ulNoActions.g:58:9: COMMA compoundType identifier
			{
			match(input,COMMA,FOLLOW_COMMA_in_moreFormals157); if (state.failed) return;
			pushFollow(FOLLOW_compoundType_in_moreFormals159);
			compoundType();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_identifier_in_moreFormals161);
			identifier();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "moreFormals"



	// $ANTLR start "functionBody"
	// ulNoActions.g:61:1: functionBody : OBRACE ( varDecl )* ( statement )* CBRACE ;
	public final void functionBody() throws RecognitionException {
		try {
			// ulNoActions.g:61:13: ( OBRACE ( varDecl )* ( statement )* CBRACE )
			// ulNoActions.g:62:9: OBRACE ( varDecl )* ( statement )* CBRACE
			{
			match(input,OBRACE,FOLLOW_OBRACE_in_functionBody186); if (state.failed) return;
			// ulNoActions.g:62:16: ( varDecl )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==TYPE) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// ulNoActions.g:62:16: varDecl
					{
					pushFollow(FOLLOW_varDecl_in_functionBody188);
					varDecl();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			// ulNoActions.g:62:25: ( statement )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHARACTERCONSTANT||(LA5_0 >= FALSE && LA5_0 <= INTEGERCONSTANT)||(LA5_0 >= OPARENTHESES && LA5_0 <= SEMICOLON)||(LA5_0 >= STRINGCONSTANT && LA5_0 <= TRUE)||LA5_0==WHILE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// ulNoActions.g:62:25: statement
					{
					pushFollow(FOLLOW_statement_in_functionBody191);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,CBRACE,FOLLOW_CBRACE_in_functionBody194); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionBody"



	// $ANTLR start "varDecl"
	// ulNoActions.g:65:1: varDecl : compoundType identifier SEMICOLON ;
	public final void varDecl() throws RecognitionException {
		try {
			// ulNoActions.g:65:8: ( compoundType identifier SEMICOLON )
			// ulNoActions.g:66:9: compoundType identifier SEMICOLON
			{
			pushFollow(FOLLOW_compoundType_in_varDecl212);
			compoundType();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_identifier_in_varDecl214);
			identifier();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDecl216); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "varDecl"



	// $ANTLR start "statement"
	// ulNoActions.g:69:1: statement : ( SEMICOLON | exprStatement | ifStatement | whileStatement | printStatement | printlnStatement | returnStatement | assignStatement | arrayAssignStatement );
	public final void statement() throws RecognitionException {
		try {
			// ulNoActions.g:69:10: ( SEMICOLON | exprStatement | ifStatement | whileStatement | printStatement | printlnStatement | returnStatement | assignStatement | arrayAssignStatement )
			int alt6=9;
			switch ( input.LA(1) ) {
			case SEMICOLON:
				{
				alt6=1;
				}
				break;
			case ID:
				{
				int LA6_2 = input.LA(2);
				if ( (synpred7_ulNoActions()) ) {
					alt6=2;
				}
				else if ( (synpred13_ulNoActions()) ) {
					alt6=8;
				}
				else if ( (true) ) {
					alt6=9;
				}

				}
				break;
			case CHARACTERCONSTANT:
			case FALSE:
			case FLOATCONSTANT:
			case INTEGERCONSTANT:
			case OPARENTHESES:
			case STRINGCONSTANT:
			case TRUE:
				{
				alt6=2;
				}
				break;
			case IF:
				{
				alt6=3;
				}
				break;
			case WHILE:
				{
				alt6=4;
				}
				break;
			case PRINT:
				{
				alt6=5;
				}
				break;
			case PRINTLN:
				{
				alt6=6;
				}
				break;
			case RETURN:
				{
				alt6=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// ulNoActions.g:70:9: SEMICOLON
					{
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement240); if (state.failed) return;
					}
					break;
				case 2 :
					// ulNoActions.g:71:12: exprStatement
					{
					pushFollow(FOLLOW_exprStatement_in_statement253);
					exprStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// ulNoActions.g:72:12: ifStatement
					{
					pushFollow(FOLLOW_ifStatement_in_statement266);
					ifStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// ulNoActions.g:73:12: whileStatement
					{
					pushFollow(FOLLOW_whileStatement_in_statement279);
					whileStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// ulNoActions.g:74:12: printStatement
					{
					pushFollow(FOLLOW_printStatement_in_statement292);
					printStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// ulNoActions.g:75:12: printlnStatement
					{
					pushFollow(FOLLOW_printlnStatement_in_statement305);
					printlnStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					// ulNoActions.g:76:12: returnStatement
					{
					pushFollow(FOLLOW_returnStatement_in_statement318);
					returnStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 8 :
					// ulNoActions.g:77:12: assignStatement
					{
					pushFollow(FOLLOW_assignStatement_in_statement331);
					assignStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 9 :
					// ulNoActions.g:78:12: arrayAssignStatement
					{
					pushFollow(FOLLOW_arrayAssignStatement_in_statement345);
					arrayAssignStatement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "exprStatement"
	// ulNoActions.g:81:1: exprStatement : expr SEMICOLON ;
	public final void exprStatement() throws RecognitionException {
		try {
			// ulNoActions.g:81:14: ( expr SEMICOLON )
			// ulNoActions.g:82:9: expr SEMICOLON
			{
			pushFollow(FOLLOW_expr_in_exprStatement370);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_exprStatement372); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "exprStatement"



	// $ANTLR start "ifStatement"
	// ulNoActions.g:84:1: ifStatement : IF OPARENTHESES expr CPARENTHESES block elsePart ;
	public final void ifStatement() throws RecognitionException {
		try {
			// ulNoActions.g:84:12: ( IF OPARENTHESES expr CPARENTHESES block elsePart )
			// ulNoActions.g:85:9: IF OPARENTHESES expr CPARENTHESES block elsePart
			{
			match(input,IF,FOLLOW_IF_in_ifStatement395); if (state.failed) return;
			match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_ifStatement397); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_ifStatement399);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_ifStatement401); if (state.failed) return;
			pushFollow(FOLLOW_block_in_ifStatement403);
			block();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_elsePart_in_ifStatement405);
			elsePart();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ifStatement"



	// $ANTLR start "elsePart"
	// ulNoActions.g:87:1: elsePart : ( ELSE block |);
	public final void elsePart() throws RecognitionException {
		try {
			// ulNoActions.g:87:9: ( ELSE block |)
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==ELSE) ) {
				alt7=1;
			}
			else if ( (LA7_0==EOF||LA7_0==CBRACE||LA7_0==CHARACTERCONSTANT||(LA7_0 >= FALSE && LA7_0 <= INTEGERCONSTANT)||(LA7_0 >= OPARENTHESES && LA7_0 <= SEMICOLON)||(LA7_0 >= STRINGCONSTANT && LA7_0 <= TRUE)||LA7_0==WHILE) ) {
				alt7=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// ulNoActions.g:88:9: ELSE block
					{
					match(input,ELSE,FOLLOW_ELSE_in_elsePart428); if (state.failed) return;
					pushFollow(FOLLOW_block_in_elsePart430);
					block();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// ulNoActions.g:90:9: 
					{
					}
					break;

			}
		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "elsePart"



	// $ANTLR start "whileStatement"
	// ulNoActions.g:91:1: whileStatement : WHILE OPARENTHESES expr CPARENTHESES block ;
	public final void whileStatement() throws RecognitionException {
		try {
			// ulNoActions.g:91:15: ( WHILE OPARENTHESES expr CPARENTHESES block )
			// ulNoActions.g:92:9: WHILE OPARENTHESES expr CPARENTHESES block
			{
			match(input,WHILE,FOLLOW_WHILE_in_whileStatement465); if (state.failed) return;
			match(input,OPARENTHESES,FOLLOW_OPARENTHESES_in_whileStatement467); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_whileStatement469);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,CPARENTHESES,FOLLOW_CPARENTHESES_in_whileStatement471); if (state.failed) return;
			pushFollow(FOLLOW_block_in_whileStatement473);
			block();
			state._fsp--;
			if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "whileStatement"



	// $ANTLR start "printStatement"
	// ulNoActions.g:94:1: printStatement : PRINT expr SEMICOLON ;
	public final void printStatement() throws RecognitionException {
		try {
			// ulNoActions.g:94:15: ( PRINT expr SEMICOLON )
			// ulNoActions.g:95:9: PRINT expr SEMICOLON
			{
			match(input,PRINT,FOLLOW_PRINT_in_printStatement498); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_printStatement500);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_printStatement502); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "printStatement"



	// $ANTLR start "printlnStatement"
	// ulNoActions.g:97:1: printlnStatement : PRINTLN expr SEMICOLON ;
	public final void printlnStatement() throws RecognitionException {
		try {
			// ulNoActions.g:97:17: ( PRINTLN expr SEMICOLON )
			// ulNoActions.g:98:9: PRINTLN expr SEMICOLON
			{
			match(input,PRINTLN,FOLLOW_PRINTLN_in_printlnStatement526); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_printlnStatement528);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_printlnStatement530); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "printlnStatement"



	// $ANTLR start "returnStatement"
	// ulNoActions.g:100:1: returnStatement : RETURN ( expr )? SEMICOLON ;
	public final void returnStatement() throws RecognitionException {
		try {
			// ulNoActions.g:100:16: ( RETURN ( expr )? SEMICOLON )
			// ulNoActions.g:101:9: RETURN ( expr )? SEMICOLON
			{
			match(input,RETURN,FOLLOW_RETURN_in_returnStatement554); if (state.failed) return;
			// ulNoActions.g:101:16: ( expr )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==CHARACTERCONSTANT||(LA8_0 >= FALSE && LA8_0 <= ID)||LA8_0==INTEGERCONSTANT||LA8_0==OPARENTHESES||(LA8_0 >= STRINGCONSTANT && LA8_0 <= TRUE)) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// ulNoActions.g:101:16: expr
					{
					pushFollow(FOLLOW_expr_in_returnStatement556);
					expr();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_returnStatement559); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "returnStatement"



	// $ANTLR start "assignStatement"
	// ulNoActions.g:103:1: assignStatement : identifier EQUAL expr SEMICOLON ;
	public final void assignStatement() throws RecognitionException {
		try {
			// ulNoActions.g:103:16: ( identifier EQUAL expr SEMICOLON )
			// ulNoActions.g:104:9: identifier EQUAL expr SEMICOLON
			{
			pushFollow(FOLLOW_identifier_in_assignStatement583);
			identifier();
			state._fsp--;
			if (state.failed) return;
			match(input,EQUAL,FOLLOW_EQUAL_in_assignStatement585); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_assignStatement587);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_assignStatement589); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignStatement"



	// $ANTLR start "arrayAssignStatement"
	// ulNoActions.g:107:1: arrayAssignStatement : identifier OBRACKET expr CBRACKET EQUAL expr SEMICOLON ;
	public final void arrayAssignStatement() throws RecognitionException {
		try {
			// ulNoActions.g:107:21: ( identifier OBRACKET expr CBRACKET EQUAL expr SEMICOLON )
			// ulNoActions.g:108:9: identifier OBRACKET expr CBRACKET EQUAL expr SEMICOLON
			{
			pushFollow(FOLLOW_identifier_in_arrayAssignStatement618);
			identifier();
			state._fsp--;
			if (state.failed) return;
			match(input,OBRACKET,FOLLOW_OBRACKET_in_arrayAssignStatement620); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_arrayAssignStatement622);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,CBRACKET,FOLLOW_CBRACKET_in_arrayAssignStatement624); if (state.failed) return;
			match(input,EQUAL,FOLLOW_EQUAL_in_arrayAssignStatement626); if (state.failed) return;
			pushFollow(FOLLOW_expr_in_arrayAssignStatement628);
			expr();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_arrayAssignStatement630); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "arrayAssignStatement"



	// $ANTLR start "block"
	// ulNoActions.g:111:1: block : OBRACE ( statement )* CBRACE ;
	public final void block() throws RecognitionException {
		try {
			// ulNoActions.g:111:6: ( OBRACE ( statement )* CBRACE )
			// ulNoActions.g:112:9: OBRACE ( statement )* CBRACE
			{
			match(input,OBRACE,FOLLOW_OBRACE_in_block655); if (state.failed) return;
			// ulNoActions.g:112:16: ( statement )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==CHARACTERCONSTANT||(LA9_0 >= FALSE && LA9_0 <= INTEGERCONSTANT)||(LA9_0 >= OPARENTHESES && LA9_0 <= SEMICOLON)||(LA9_0 >= STRINGCONSTANT && LA9_0 <= TRUE)||LA9_0==WHILE) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// ulNoActions.g:112:16: statement
					{
					pushFollow(FOLLOW_statement_in_block657);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop9;
				}
			}

			match(input,CBRACE,FOLLOW_CBRACE_in_block660); if (state.failed) return;
			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "expr"
	// ulNoActions.g:115:1: expr : expr2 ( DOUBLEEQUAL expr2 )* ;
	public final void expr() throws RecognitionException {
		try {
			// ulNoActions.g:115:5: ( expr2 ( DOUBLEEQUAL expr2 )* )
			// ulNoActions.g:116:9: expr2 ( DOUBLEEQUAL expr2 )*
			{
			pushFollow(FOLLOW_expr2_in_expr685);
			expr2();
			state._fsp--;
			if (state.failed) return;
			// ulNoActions.g:116:15: ( DOUBLEEQUAL expr2 )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==DOUBLEEQUAL) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// ulNoActions.g:116:17: DOUBLEEQUAL expr2
					{
					match(input,DOUBLEEQUAL,FOLLOW_DOUBLEEQUAL_in_expr689); if (state.failed) return;
					pushFollow(FOLLOW_expr2_in_expr691);
					expr2();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop10;
				}
			}

			}

		}

		        catch (RecognitionException ex) {
		                reportError(ex);
		                throw ex;
		        }

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "expr"


